<resources>
    <string name="app_name">PiCar</string>
    <!--<string name="PiCarMAC">B8:27:EB:FB:EC:A4</string>-->
    <string name="pi_wifi_ssid">PiZeroCar</string>
    <string name="pi_wifi_pw">P1Password</string>
    <string name="pi_ap_ip">http://192.168.10.1</string>
    <string name="error_lost_connection">Lost the connection to the camera.</string>
    <string name="error_couldnt_connect">Couldn\'t connect to the camera.</string>
    <string name="video">Video</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="pref_key_joystick">joystick_one-two</string>
    <string name="pref_key_speed_seek">seek_bar_speed</string>
    <string name="pref_key_enable_camera">enable_camera_stream</string>
    <string name="pref_key_enable_ultrasonic">enable_distance_measurement</string>
    <string name="pref_key_enable_acc">enable_adaptive_cruise_control</string>
    <string name="pref_key_enable_lka">enable_lane_keep_assist</string>
    <string name="pref_key_enable_gps">enable_gps_tracking</string>
    <string name="pref_key_first_launch">first_launch</string>
    <string name="pref_key_connection_config">connection_config</string>
    <string name="connection_name">Connection Name</string>
    <string name="connection_type">Connection Type</string>
    <string name="connection_identifier">Identifier</string>
    <string name="selected_connection_json_key">selected_connection_json_key</string>
    <string name="ultrasonic_initializing">Initializing..</string>
    <string name="connection_connecting">Connecting</string>
    <string name="connection_connected">Connected</string>
    <string name="connection_disconnected">Disconnected</string>
    <string name="wear_set_angle">wearSetAngle</string>
    <string name="wear_set_strength">wearSetStrength</string>
    <string name="wear_connection_path">/vendetta_path</string>
    <string name="gps_prev_lat">gps_prev_lat</string>
    <string name="gps_prev_lon">gps_prev_lon</string>
    <string name="api_health_endpoint">/health</string>
    <string name="api_temp_endpoint">/health/temperature</string>
    <string name="api_ultrasonic_endpoint">/sensor/ultrasonic</string>
    <string name="api_gps_endpoint">/sensor/gps</string>
    <string name="api_control_endpoint">/control</string>
    <string name="api_speed_endpoint">/control/speed</string>
    <string name="api_steering_endpoint">/control/steering</string>
    <string name="api_acc_endpoint">/control/adaptivecruise</string>
</resources>
